# cpython-api-examples

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: codeql.yml
00_extending_python/: CMakeLists.txt  custom.cpp
00_extending_python/python/: test_custom_module.py
01_errors_exceptions/: CMakeLists.txt  custom.cpp
01_errors_exceptions/python/: test_custom_module.py
02_callback/: CMakeLists.txt  custom.cpp
02_callback/python/: test_custom_module.py
03_vargs_kwargs/: CMakeLists.txt  custom.cpp
03_vargs_kwargs/python/: test_custom_module.py
04_custom_type/: CMakeLists.txt  custom.cpp  custom.h  main.cpp
05_python_function_call/: CMakeLists.txt  main.cpp
05_python_function_call/python/: python_function_call  test.py
06_python_run/: CMakeLists.txt  main.cpp
